change default to juliusbaer.com

--- a/apps/domain_name_resolver/priv/static/index.html
+++ b/apps/domain_name_resolver/priv/static/index.html
@@ -70,7 +70,7 @@
     <form id="query-form">
         <div class="mb-4">
             <label for="hostname" class="block text-sm font-medium text-gray-600">Name</label>
-            <input type="text" id="hostname" name="hostname" value="google.com"
+            <input type="text" id="hostname" name="hostname" value="juliusbaer.com"
                    class="w-full px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
                    placeholder="Enter your name">
         </div>
